--- a/lesson9/addLesson9/index.html
+++ b/lesson9/addLesson9/index.html
@@ -7,6 +7,8 @@
     <title>AddLesson9</title>
 </head>
 <body>
+    <div id="time1"></div>
+    <div id="time2"></div>
     <script src="js/script.js"></script>
     <script src="js/script2.js"></script>
 </body>
