--- a/contest/index.html
+++ b/contest/index.html
@@ -13,7 +13,10 @@
 <div class="preloader" id="preloader">
     <img src="images/loader.gif" alt="preloader">
 </div>
-<div class="container">
+<div class="container" id="container">
+    <div class="filter" id="filter">
+        <div class="filter__item active" data-name="all">#All</div>
+    </div>
     <div class="heroes" id="heroes">
         <div class="heroes__item col-lg-4">
             <div class="heroes__item-wrap">
