--- a/contest/index.html
+++ b/contest/index.html
@@ -24,7 +24,7 @@
                     <div class="heroes__item-status">
                         deceased
                     </div>
-                    <img src="https://vignette.wikia.nocookie.net/marvelcinematicuniverse/images/e/ea/AntMan-EndgameProfile.jpg" alt="" class="heroes__item-img">
+                    <img src="images/loader.gif" alt="" class="heroes__item-img">
                     <div class="heroes__item-name">
                         <div class="heroes__item-pseudoname">
                             Ant-Man
