--- a/bonus/index.html
+++ b/bonus/index.html
@@ -21,118 +21,28 @@
         <div class="dropdown-lists">
           <div class="dropdown-lists__list dropdown-lists__list--default">
             <div class="dropdown-lists__col">
-              <div class="dropdown-lists__countryBlock">
-                <div class="dropdown-lists__total-line">
-                  <div class="dropdown-lists__country">Россия</div>
-                  <div class="dropdown-lists__count">144500000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city dropdown-lists__city--ip">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-              </div>
-              <div class="dropdown-lists__countryBlock">
-                <div class="dropdown-lists__total-line">
-                  <div class="dropdown-lists__country">Россия</div>
-                  <div class="dropdown-lists__count">144500000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-              </div>
-              <div class="dropdown-lists__countryBlock">
-                <div class="dropdown-lists__total-line">
-                  <div class="dropdown-lists__country">Россия</div>
-                  <div class="dropdown-lists__count">144500000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-              </div>
-              <div class="dropdown-lists__countryBlock">
-                <div class="dropdown-lists__total-line">
-                  <div class="dropdown-lists__country">Россия</div>
-                  <div class="dropdown-lists__count">144500000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-              </div>
-              <div class="dropdown-lists__countryBlock">
-                <div class="dropdown-lists__total-line">
-                  <div class="dropdown-lists__country">Россия</div>
-                  <div class="dropdown-lists__count">144500000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-              </div>
             </div>
           </div>
           <div class="dropdown-lists__list dropdown-lists__list--select">
             <div class="dropdown-lists__col">
-              <div class="dropdown-lists__countryBlock">
-                <div class="dropdown-lists__total-line">
-                  <div class="dropdown-lists__country">Россия</div>
-                  <div class="dropdown-lists__count">144500000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-                <div class="dropdown-lists__line">
-                  <div class="dropdown-lists__city">Москва</div>
-                  <div class="dropdown-lists__count">12615000</div>
-                </div>
-              </div>
+<!--              <div class="dropdown-lists__countryBlock">-->
+<!--                <div class="dropdown-lists__total-line">-->
+<!--                  <div class="dropdown-lists__country">Россия</div>-->
+<!--                  <div class="dropdown-lists__count">144500000</div>-->
+<!--                </div>-->
+<!--                <div class="dropdown-lists__line">-->
+<!--                  <div class="dropdown-lists__city">Москва</div>-->
+<!--                  <div class="dropdown-lists__count">12615000</div>-->
+<!--                </div>-->
+<!--                <div class="dropdown-lists__line">-->
+<!--                  <div class="dropdown-lists__city">Москва</div>-->
+<!--                  <div class="dropdown-lists__count">12615000</div>-->
+<!--                </div>-->
+<!--                <div class="dropdown-lists__line">-->
+<!--                  <div class="dropdown-lists__city">Москва</div>-->
+<!--                  <div class="dropdown-lists__count">12615000</div>-->
+<!--                </div>-->
+<!--              </div>-->
             </div>
           </div>
           <div class="dropdown-lists__list dropdown-lists__list--autocomplete">
@@ -158,6 +68,7 @@
       <a class="button" href="#">Перейти</a>
     </div>
   </section>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
