--- a/bonus/index.html
+++ b/bonus/index.html
@@ -12,6 +12,9 @@
 
 <body>
   <section class="main">
+      <div class="spiner">
+          <img src="images/spiner.gif" alt="spiner" class="spiner__item">
+      </div>
     <div class="input-cities">
       <input id="select-cities" type="text" placeholder="">
       <div class="close-button"></div>
@@ -30,24 +33,12 @@
           <div class="dropdown-lists__list dropdown-lists__list--autocomplete">
             <div class="dropdown-lists__col">
               <div class="dropdown-lists__countryBlock">
-<!--                <div class="dropdown-lists__line">-->
-<!--                  <div class="dropdown-lists__city">Москва</div>-->
-<!--                  <div class="dropdown-lists__count">12615000</div>-->
-<!--                </div>-->
-<!--                <div class="dropdown-lists__line">-->
-<!--                  <div class="dropdown-lists__city">Москва</div>-->
-<!--                  <div class="dropdown-lists__count">12615000</div>-->
-<!--                </div>-->
-<!--                <div class="dropdown-lists__line">-->
-<!--                  <div class="dropdown-lists__city">Москва</div>-->
-<!--                  <div class="dropdown-lists__count">12615000</div>-->
-<!--                </div>-->
               </div>
             </div>
           </div>
         </div>
       </div>
-      <a class="button" href="#">Перейти</a>
+      <a class="button" href="#" target="_blank">Перейти</a>
     </div>
   </section>
   <script src="./js/script.js"></script>
